--- a/src/app/components/score-board/score-board.component.html
+++ b/src/app/components/score-board/score-board.component.html
@@ -1,12 +1,19 @@
-<mat-card>
-  <mat-card-content>
-    <mat-list>
-      <mat-list-item>
-        <mat-form-field appearance="fill">
-          <mat-label>Player Name</mat-label>
-          <input matInput value="{{playerName}}">
-        </mat-form-field>
-      </mat-list-item>
-    </mat-list>
-  </mat-card-content>
-</mat-card>
+<div>
+  <mat-card>
+    <mat-card-content>
+      <mat-list>
+        <mat-list-item>
+          <mat-card>
+            <h4>{{gameRecord$ | async}}</h4>
+          </mat-card>
+        </mat-list-item>
+        <mat-list-item>
+          <mat-form-field appearance="fill">
+            <mat-label>Player Name</mat-label>
+            <input matInput>
+          </mat-form-field>
+        </mat-list-item>
+      </mat-list>
+    </mat-card-content>
+  </mat-card>
+</div>
