--- a/src/app/components/score-board/score-board.component.html
+++ b/src/app/components/score-board/score-board.component.html
@@ -10,7 +10,7 @@
         <mat-list-item>
           <mat-form-field appearance="fill">
             <mat-label>Player Name</mat-label>
-            <input matInput>
+            <input matInput value="{{playerName$ | async}}">
           </mat-form-field>
         </mat-list-item>
       </mat-list>
