--- a/src/app/components/letter-panel/letter-panel.component.css
+++ b/src/app/components/letter-panel/letter-panel.component.css
@@ -1,3 +1,10 @@
-mat-grid-tile {
+mat-grid-list {
   background-color: lightblue;
+}
+
+.ngrx-hangman__letter-panel-second-row {
+  margin: 0px 5vw;
+}
+.ngrx-hangman__letter-panel-third-row{
+  margin: 0vw 10vw;
 }
