--- a/src/app/components/letter-panel/letter-panel.component.html
+++ b/src/app/components/letter-panel/letter-panel.component.html
@@ -1,9 +1,13 @@
-<mat-grid-list rows="3" cols="1" class="ngrx-hangman__letter-panel-outer-list">
-  <mat-grid-list *ngFor="let rowLetters of letters; index as rowIndex" cols="{{rowLetters.length}}" [ngClass]="rowCss[rowIndex]">
-    <mat-grid-tile *ngFor="let firstRowLetter of rowLetters">
-      <button mat-fab (click)="onLetterClicked($event, firstRowLetter)">
-        {{firstRowLetter}}
-      </button>
-    </mat-grid-tile>
-  </mat-grid-list>
-</mat-grid-list>
+<mat-card>
+  <mat-card-content>
+    <mat-grid-list rows="3" cols="1" class="ngrx-hangman__letter-panel-outer-list">
+      <mat-grid-list *ngFor="let rowLetters of letters; index as rowIndex" cols="{{rowLetters.length}}" [ngClass]="rowCss[rowIndex]">
+        <mat-grid-tile *ngFor="let firstRowLetter of rowLetters">
+          <button mat-fab (click)="onLetterClicked($event, firstRowLetter)">
+            {{firstRowLetter}}
+          </button>
+        </mat-grid-tile>
+      </mat-grid-list>
+    </mat-grid-list>
+  </mat-card-content>
+</mat-card>
