--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,16 @@
-<div>
-  <mat-grid-list rows="20" cols="1" rowHeight="5vh">
-    <mat-grid-tile [rowspan]="8">
+<div class="outerDiv">
+  <div class="topDiv">
+    <div class="leftTopDiv">
+      &nbsp;
+    </div>
+    <div class="centerTopDiv">
+      &nbsp;
+    </div>
+    <div class="rightTopDiv">
       <app-score-board></app-score-board>
-    </mat-grid-tile>
-    <mat-grid-tile [rowspan]="12">
-      <app-letter-panel></app-letter-panel>
-    </mat-grid-tile>
-  </mat-grid-list>
+    </div>
+  </div>
+  <div class="bottomDiv">
+    &nbsp;
+  </div>
 </div>
