feat: flex main layout

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,35 +1,35 @@
-.outerDiv {
+.app-component__wrapper {
   display: flex;
   flex-direction: column;
   height: 100%;
 }
-.topDiv {
-  background-color: aqua;
+.app-component__game-layout-panel {
   display: flex;
   flex:6;
   flex-direction: row;
 }
-.leftTopDiv {
+.app-component__control-panel {
   display: flex;
   flex: 2;
   background-color: orange;
 }
-.centerTopDiv {
+.app-component__game-panel {
   display: flex;
   flex:4;
+  background-color: aqua;
 }
-.rightTopDiv {
+.app-component__score-board-panel-wrapper {
   display: flex;
   flex: 2;
-  background-color: chartreuse;
   justify-content: center;
   padding-top: 5vh;
 }
-.bottomDiv {
-  background-color: rebeccapurple;
+.app-component__letter-panel-wrapper {
   display:flex;
   flex:4;
+  justify-content: center;
 }
 app-letter-panel {
   width: 100%;
+  padding: 0em 15em;
 }
