--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,16 @@
-<div class="outerDiv">
-  <div class="topDiv">
-    <div class="leftTopDiv">
+<div class="app-component__wrapper">
+  <div class="app-component__game-layout-panel">
+    <div class="app-component__control-panel">
       &nbsp;
     </div>
-    <div class="centerTopDiv">
+    <div class="app-component__game-panel">
       &nbsp;
     </div>
-    <div class="rightTopDiv">
+    <div class="app-component__score-board-panel-wrapper">
       <app-score-board></app-score-board>
     </div>
   </div>
-  <div class="bottomDiv">
+  <div class="app-component__letter-panel-wrapper">
     <app-letter-panel></app-letter-panel>
   </div>
 </div>
