feat: control-panel component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <div class="app-component__wrapper">
   <div class="app-component__game-layout-panel">
-    <div class="app-component__control-panel">
-      &nbsp;
+    <div class="app-component__side-panel-wrapper">
+      <app-control-panel></app-control-panel>
     </div>
     <div class="app-component__game-panel">
       &nbsp;
     </div>
-    <div class="app-component__score-board-panel-wrapper">
+    <div class="app-component__side-panel-wrapper">
       <app-score-board></app-score-board>
     </div>
   </div>
