feat: game-canvas wip

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <app-control-panel></app-control-panel>
     </div>
     <div class="app-component__game-panel">
-      &nbsp;
+      <app-game-canvas></app-game-canvas>
     </div>
     <div class="app-component__side-panel-wrapper">
       <app-score-board></app-score-board>
