--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -17,7 +17,6 @@
 .app-component__game-panel {
   display: flex;
   flex:4;
-  background-color: aqua;
 }
 .app-component__letter-panel-wrapper {
   display:flex;
@@ -27,4 +26,8 @@
 app-letter-panel {
   width: 100%;
   padding: 0em 15em;
+}
+app-game-canvas {
+  width: 100%;
+  padding: 0.5em 0em;
 }
