--- a/src/app/components/game-canvas/game-canvas.component.css
+++ b/src/app/components/game-canvas/game-canvas.component.css
@@ -15,3 +15,9 @@ img, canvas {
   width: 100%; height: 100%;
   position: absolute; top:0px; left:0px;
 }
+img {
+  z-index: 1000;
+}
+canvas {
+  z-index: 1001;
+}
