--- a/src/app/components/score-board/score-board.component.html
+++ b/src/app/components/score-board/score-board.component.html
@@ -2,9 +2,10 @@
   <mat-card-content>
     <mat-list>
       <mat-list-item>
-        <mat-card>
-          <h4>{{gameRecord$ | async}}</h4>
-        </mat-card>
+        <h4>{{gameRecord$ | async}}</h4>
+      </mat-list-item>
+      <mat-list-item>
+        <h4>Guesses: {{guessCount$ | async}}</h4>
       </mat-list-item>
       <mat-list-item>
         <mat-form-field appearance="fill">
