--- a/src/app/components/guess-indicator/guess-indicator.component.html
+++ b/src/app/components/guess-indicator/guess-indicator.component.html
@@ -1,1 +1,9 @@
-<h4>Guess: {{ guess$ | async }}</h4>
+<mat-card>
+  <mat-card-content>
+    <mat-chip-set>
+      <mat-chip *ngFor="let guessLetter of (guess$ | async)">
+        <span>{{ guessLetter }}</span>
+      </mat-chip>
+    </mat-chip-set>
+  </mat-card-content>
+</mat-card>
