--- a/src/app/components/score-board/score-board.component.html
+++ b/src/app/components/score-board/score-board.component.html
@@ -5,16 +5,13 @@
         <h4>{{gameRecord$ | async}}</h4>
       </mat-list-item>
       <mat-list-item>
+        <h4>Player: {{playerName$ | async}}</h4>
+      </mat-list-item>
+      <mat-list-item>
         <h4>Elapsed Time: {{gameTime$ | async}}</h4>
       </mat-list-item>
       <mat-list-item>
         <h4>Guessed Letters: {{guessCount$ | async}}</h4>
-      </mat-list-item>
-      <mat-list-item>
-        <mat-form-field appearance="fill">
-          <mat-label>Player Name</mat-label>
-          <input matInput [formControl]="playerName" value="{{playerName$ | async}}" (change)="onFormPlayerNameChange()">
-        </mat-form-field>
       </mat-list-item>
     </mat-list>
   </mat-card-content>
