feat: pause wip

--- a/src/app/components/control-panel/control-panel.component.html
+++ b/src/app/components/control-panel/control-panel.component.html
@@ -1,1 +1,9 @@
-<button mat-raised-button (click)="onNewGameClicked()">New Game</button>
+<mat-list>
+  <mat-list-item>
+    <button mat-raised-button (click)="onNewGameClicked()">New Game</button>
+  </mat-list-item>
+  <mat-list-item>
+    <button mat-raised-button (click)="onPauseClicked()">Pause</button>
+  </mat-list-item>
+</mat-list>
+
