feat: hide current guess while paused

--- a/src/app/components/guess-indicator/guess-indicator.component.html
+++ b/src/app/components/guess-indicator/guess-indicator.component.html
@@ -5,5 +5,6 @@
         <span>{{ guessLetter }}</span>
       </mat-chip>
     </mat-chip-set>
+    <h6 *ngIf="isPaused$ | async">The game is paused. Resume play to view the current guess</h6>
   </mat-card-content>
 </mat-card>
