--- a/src/app/components/letter-panel/letter-panel.component.css
+++ b/src/app/components/letter-panel/letter-panel.component.css
@@ -7,3 +7,17 @@
 mat-grid-list {
   height: 100%;
 }
+.hidden {
+  display: none;
+}
+
+.ngrx-hangman__letter-panel-pause-notification-wrapper {
+  position:absolute;
+  top:0px;
+  left: 0px;
+  width:100%;
+  height:100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
