feat: timer icon for score-board elapse time

--- a/src/app/components/score-board/score-board.component.html
+++ b/src/app/components/score-board/score-board.component.html
@@ -8,7 +8,7 @@
         <h4 class="score-board__player-name">Player: {{playerName$ | async}}</h4>
       </mat-list-item>
       <mat-list-item>
-        <h4>Elapsed Time: {{gameTime$ | async}}</h4>
+        <h4><mat-icon>timer</mat-icon>{{gameTime$ | async}}</h4>
       </mat-list-item>
       <mat-list-item>
         <h4 class="score-board__guessed-letters">Guessed Letters: {{guessCount$ | async}}</h4>
