feat: display guessedLetterCount of wordLength in guess indicator

--- a/src/app/components/guess-indicator/guess-indicator.component.html
+++ b/src/app/components/guess-indicator/guess-indicator.component.html
@@ -5,6 +5,9 @@
         <span>{{ guessLetter }}</span>
       </mat-chip>
     </mat-chip-set>
+    <div>
+      <span *ngIf="!(isPaused$ | async)">{{guessSummary$ | async}}</span>
+    </div>
     <h6 *ngIf="isPaused$ | async">The game is paused. Resume play to view the current guess</h6>
   </mat-card-content>
 </mat-card>
