--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,8 @@
       <app-control-panel></app-control-panel>
     </div>
     <div class="app-component__game-panel">
-      <!-- <app-game-canvas></app-game-canvas> -->
       <app-guess-indicator></app-guess-indicator>
+      <app-game-canvas></app-game-canvas>
     </div>
     <div class="app-component__side-panel-wrapper">
       <app-score-board></app-score-board>
