--- a/src/app/components/game-canvas/game-canvas.component.html
+++ b/src/app/components/game-canvas/game-canvas.component.html
@@ -1,8 +1,3 @@
-<div class="game-canvas__wrapper">
-  <div class="game-canvas__wrapper-centered">
-    <div class="game-canvas__wrapper-centered-wrapper">
-      <canvas #canvas></canvas>
-      <img src="../../../assets/ngrx-hangman-cropped.png" />
-    </div>
-  </div>
+<div>
+  <img src="{{currentImagePath$ | async}}" />
 </div>
