--- a/src/app/components/game-canvas/game-canvas.component.css
+++ b/src/app/components/game-canvas/game-canvas.component.css
@@ -1,7 +1,7 @@
 div {
   display: flex;
-  justify-content: center;
-  width:100%;
+  flex-direction: column;
+  align-items: center;
 }
 img {
   height: 300px;
